# art-db

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  Dockerfile  Procfile  README.md  cheatsheet.txt  docker-compose.yml  manage.py  pyproject.toml
artist_registry/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  settings.py  urls.py
artist_registry/artist_registry/: settings.py  urls.py
artist_registry/artists/: models.py
artists/: forms.py  (+3 more)
backend/: .dockerignore  .env.local.example  .env.production.example  .railwayignore  DEPLOYMENT.md  Dockerfile  ENV_SETUP.md  docker-compose.yml  dump_08-09-2024_21_05_57.tar  dump_10-01-2025_19_09_07.tar  dump_30-03-2024_19_40_17.tar  dump_31-03-2024_16_50_50.tar  entrypoint.sh  gunicorn_conf.py  pyproject.toml  railway_dump_2024_2  requirements.txt  run.sh  todo.dockerfile-fozen.txt
backend/artist_registry/: asgi.py  settings.py  urls.py  wsgi.py
backend/artists/: admin.py  apps.py  arweave_api.py  arweave_storage.py  forms.py  models.py  response.py  serializers.py  tests.py  throttles.py  urls.py  views.py
backend/artists/migrations/: 0003_artist_profile_image.py  0004_auto_20240202_1808.py  0005_auto_20240218_1102.py  0006_remove_artist_born.py  0007_artist_born.py  0008_auto_20240309_1253.py  0009_auto_20240330_1210.py  0010_auto_20240330_1306.py  0011_artwork_picture_url.py  0012_auto_20240331_0928.py  0013_auto_20240414_1313.py  (+4 more)
backend/db_dumbs/: railway_dump_08-04-2024_14_38_39.tar
backend/reverse-proxy/: Dockerfile  nginx.conf
backend/weaviate scripts/: weaviate_export.py  weaviate_import.py
(+75 files in other folders)
