[tool.poetry]
name = "a-db"
version = "0.1.0"
description = ""
authors = ["Jan Miksik"]

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.7.2"
django = "3.2.23"
djangorestframework = "3.13.1"
gunicorn = "20.1.0"
psycopg2-binary = "2.9.9"
pytz = "2023.3.post1"
sqlparse = "0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"